--- a/planit/requirements.txt
+++ b/planit/requirements.txt
@@ -1,9 +1,42 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
-asgiref==3.6.0
-Django==4.1.7
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+asgiref==3.5.0
+blinker==1.4
+boto3==1.26.103
+botocore==1.29.103
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info===1.1build1
+Django==3.2.12
+django-environ==0.10.0
+httplib2==0.20.2
+importlib-metadata==4.6.4
+jeepney==0.7.1
+jmespath==1.0.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
 psycopg2-binary==2.9.5
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu1
+python-dateutil==2.8.2
 python-decouple==3.8
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
-sqlparse==0.4.3
+pytz==2022.1
+PyYAML==5.4.1
+s3transfer==0.6.0
+SecretStorage==3.3.1
+six==1.16.0
+sqlparse==0.4.2
+systemd-python==234
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.15
+wadllib==1.3.6
+zipp==1.0.0
