--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,10 @@
-
-appnope==0.1.3
 asgiref==3.6.0
-asttokens==2.2.1
-backcall==0.2.0
-comm==0.1.3
-debugpy==1.6.6
-decorator==5.1.1
-Django==4.1.7
-executing==1.2.0
-ipykernel==6.22.0
-ipython==8.11.0
-jedi==0.18.2
-jmespath==1.0.1
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
-packaging==23.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.1.1
-prompt-toolkit==3.0.38
-psutil==5.9.4
-psycopg2-binary==2.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyfiglet==0.8.post1
-Pygments==2.14.0
-python-dateutil==2.8.2
+dj-database-url==1.3.0
+Django==4.2
+django-on-heroku==1.1.2
+gunicorn==20.1.0
+psycopg2-binary==2.9.6
 python-decouple==3.8
-pyzmq==25.0.2
-s3transfer==0.6.0
-six==1.16.0
 sqlparse==0.4.3
-stack-data==0.6.2
-tornado==6.2
-traitlets==5.9.0
-urllib3==1.26.15
-wcwidth==0.2.6
-blinker==1.4
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info===1.1build1
-django-environ==0.10.0
-httplib2==0.20.2
-importlib-metadata==4.6.4
-jeepney==0.7.1
-jmespath==1.0.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-psycopg2-binary==2.9.5
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu1
-python-dateutil==2.8.2
-python-decouple==3.8
-pytz==2022.1
-PyYAML==5.4.1
-s3transfer==0.6.0
-SecretStorage==3.3.1
-six==1.16.0
-sqlparse==0.4.2
-systemd-python==234
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.15
-wadllib==1.3.6
-zipp==1.0.0
+typing_extensions==4.5.0
+whitenoise==6.4.0
